feat: create book api (#9)
